# UBSEComponentPlugins

./: .gitignore  README.md  USERGUIDE.md  meson.build  meson_options.txt  sample_create_attach  sample_detach_delete
docs/design/: implementation-design.md  mvp-implementation-plan.md
docs/user/: ubsectl-lbc-mock-guide.md
include/: ssu_api.h  ssu_controller.h  ssu_dataplane.h  ssu_plugin.h  ubse_ssu_sdk.h
mock/: run_mock.sh  setup_mock_target.sh
scripts/: build_reqshim.sh
src/kernel/reqshim/: Kbuild  Makefile  meson.build  reqshim_blk.c  reqshim_cmd.c  reqshim_internal.h  reqshim_ioctl.c  reqshim_main.c  reqshim_map.c  reqshim_phys.c  reqshim_uapi.h
src/user/api/: meson.build  ssu_api.c  ssu_api.cpp
src/user/controller/: meson.build  ssu_controller.c  ssu_controller.cpp
src/user/dataplane/: meson.build  ssu_dataplane.c
src/user/plugin/: meson.build  reqshim_iface.cpp  reqshim_iface.h
src/user/plugin/vendors/lbc_mock/: meson.build  ssu_plugin_lbc_mock.cpp  ssu_plugin_lbc_mock.h
src/user/plugin/vendors/mock/: meson.build  ssu_plugin_mock.c  ssu_plugin_mock.cpp
src/user/runtime/: meson.build  ssu_runtime.c  ssu_runtime.cpp
src/user/scheduler/: meson.build  ssu_scheduler.cpp
src/user/sdk/: meson.build  ubse_ssu_sdk.cpp
tests/: meson.build
tests/contract/: api_dlopen.cpp  api_extent_buffer.c  api_extent_buffer.cpp  api_gating.c  api_gating.cpp  api_lba_offsets.cpp  api_lifecycle.c  api_lifecycle.cpp  api_logical.cpp  api_named_idempotent.cpp  control_lifecycle.c  control_lifecycle.cpp  control_multiphys.cpp  control_rank_distribution.cpp  control_stale_logdev.cpp  dataplane_mock.c  dataplane_mock.cpp  meson.build  mock_pool.c  mock_pool.cpp  reqshim_build_script.sh  reqshim_control_source.cpp  reqshim_dataplane_source.cpp  reqshim_iface.cpp  runtime_error_hints.cpp  sdk_diagnostics.cpp  sdk_dlopen.cpp  sdk_linkage.sh  shared_mount.c  shared_mount.cpp  ubsectl_linkage.sh
tests/lbc_mock/: check.sh  lbc_mock_plugin_flow.cpp  meson.build  sdk_flow.cpp  sdk_flow.sh  self_hosted_mock_contract.sh  ubsectl_error_flow.sh  ubsectl_flow.sh  userguide_cli_flow.sh  userguide_sdk_flow.cpp  userguide_sdk_flow.sh
tests/mvp1/: check.sh  meson.build
tests/mvp2/: check.sh  meson.build  ssu.conf
tests/mvp3/: check.sh  meson.build
tests/mvp4/: check.sh  meson.build
tests/mvp5/: check.sh  meson.build  ssu.conf
tests/stubs/: meson.build
tests/stubs/ubs_io/: meson.build  ssu_smoke.c  ssu_smoke.cpp
tools/: meson.build  ubsectl.c  ubsectl.cpp
