option('combine_core', type: 'boolean', value: false,
  description: 'Build a combined core library in a later stage')
option('vendor', type: 'combo', choices: ['mock', 'lbc_mock'], value: 'mock',
  description: 'Vendor plugin to build')
option('build_kernel', type: 'feature', value: 'disabled',
  description: 'Build the out-of-tree ReqShim kernel module')
option('kernel_src_dir', type: 'string', value: '',
  description: 'Kernel build tree, usually /lib/modules/$(uname -r)/build')
